优化java支持